[tool.poetry]
name = "mkdocs-site"
version = "0.1.0"
description = "site for documentation, practices, how-to-guides, bookmarks and learnings"
authors = ["Bav Malhi <bavmalhi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.17"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
